[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axolotl-contribs-lgpl"
version = "0.0.1.beta1"
description = "LGPL contributions to the axolotl framework"
authors = [{ name="Wing Lian" }]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3"
]

[tool.setuptools.packages.find]
where = ["src"]
